<resources>
    <string name="app_name">Gheras Point</string>
    <string name="title_activity_login_activty">LoginActivty</string>
    <string name="visitor">Visitor</string>
    <string name="title_activity_main">النتائج والإنجازات</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">LOGIN</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="saved_setting_push">saved setting push</string>
    <string name="saved_setting_sound">saved setting sound</string>
    <string name="saved_setting_vibrate">saved setting vibrate</string>
    <string name="share_text"> DownLoad Gheras Poinsts Android App  .Market url: play.google.com/store/apps/details?id=com.gheraspoints </string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="help1">Version 1.0 \n Developed By :\n AppleFish Android Developers Team </string>
    <string name="help2">To contact with developer team you can use the following E-mail </string>
    <string name="help3">For support and feedBack ,Please connect us on the following E-mail </string>
    <string name="help4">applefish.team@gmail.com</string>
    <string name="help5">Thank you for using our app </string>
    <string name="help6">itbirr@gmail.com</string>
    <string name="title_activity_task">TaskActivity</string>
</resources>
