<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.applefish.gheraspoint.activty.HelpActivity"
    tools:showIn="@layout/activity_help"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:contentDescription="icon"
        android:layout_height="0dp"
        android:background="@drawable/gheras_img"
        android:layout_weight="0.20"
        android:layout_gravity="center"/>
    <TextView
        android:text="Ghreas Points App "
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView1"
        android:layout_weight="0.10"/>

    <TextView
        android:text="@string/help1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_weight="0.17"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:id="@+id/view" />

    <TextView
        android:text="@string/help2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"

        android:gravity="center"
        android:id="@+id/textView6"
        android:layout_weight="0.10"
        />
    <TextView
        android:text="@string/help4"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/textView7"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:autoLink="email"/>
    <TextView
        android:text="@string/help3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"

        android:gravity="center"
        android:id="@+id/textView3"
        android:layout_weight="0.10"
        />
    <TextView
        android:text="@string/help6"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/textView4"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:autoLink="email"/>

    <TextView
        android:text="@string/help5"
        android:layout_width="match_parent"
        android:textColor="#c0c0c0"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_height="0dp"
        android:gravity="top|center"
        android:id="@+id/textView5"
        android:layout_weight="0.10"/>
</LinearLayout>
